# supportlevels.io

./: .replit  README.md  app.py  crypto_data.py  migrate_db.py  models.py  pyproject.toml  replit.md  sector_data.py  stock_analyzer.py
attached_assets/: Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-user-sett-1754192667065_1754192667066.txt  Pasted-from-flask-import-Flask-render-template-string-import-yfinance-as-yf-import-pandas-as-pd-app-Fla-1754185737955_1754185737957.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-user-settings-user-id-does-1754192736206_1754192736206.txt
instance/: supportlevels.db
static/: manifest.json  sw.js
static/css/: custom.css  style.css
static/js/: charts.js  favorites.js
templates/: admin.html  analysis.html  base.html  compare.html  dashboard.html  index.html  landing.html  login.html  settings.html  stock_detail.html
