[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "numpy>=2.3.2",
    "oauthlib>=3.3.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
    "flask-login>=0.6.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth>=2.40.3",
]
